--- a/NetEvent/Client/Pages/CompleteRegistration.razor
+++ b/NetEvent/Client/Pages/CompleteRegistration.razor
@@ -1,4 +1,4 @@
-﻿@page "/completeregistration"
+﻿@page "/register/external/complete"
 
 @inject Microsoft.Extensions.Localization.IStringLocalizer<App> Localize
 
