--- a/NetEvent/Client/Pages/Administration/SystemInfo.razor
+++ b/NetEvent/Client/Pages/Administration/SystemInfo.razor
@@ -16,24 +16,25 @@
         
     </MudTabPanel>
     <MudTabPanel Text="@Localize["Administration.Users.Roles.Components"]">
-       @* <MudTable Items="@Elements" Dense="true" Hover="true" Bordered="false" Striped="true" Filter="new Func<String,bool>(FilterFunc1)">
+       <MudTable Items="@_SystemInfos" Dense="true" Hover="true" Bordered="false" Striped="true">
+       @* <MudTable Items="@_SystemInfos" Dense="true" Hover="true" Bordered="false" Striped="true" Filter="new Func<String,bool>(FilterFunc1)"> *@
         <ToolBarContent>
             <MudText Typo="Typo.h6">@Localize["Administration.Systeminfo.Title"]</MudText>
             <MudSpacer />
-            <MudTextField @bind-Value="searchString1" Placeholder="@Localize["Administration.Systeminfo.SearchPlaceholder"]" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+            @* <MudTextField @bind-Value="searchString1" Placeholder="@Localize["Administration.Systeminfo.SearchPlaceholder"]" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField> *@
         </ToolBarContent>
         <HeaderContent>
             <MudTh>Component</MudTh>
             <MudTh>Version</MudTh>
         </HeaderContent>
         <RowTemplate>
-            <MudTd DataLabel="Nr">@context.Component</MudTd>
-            <MudTd DataLabel="Sign">@context.Version</MudTd>
+            <MudTd DataLabel="Nr">@context.Key</MudTd>
+            <MudTd DataLabel="Sign">@context.Value</MudTd>
         </RowTemplate>
         <PagerContent>
             <MudTablePager />
         </PagerContent>
-        </MudTable> *@
+        </MudTable> 
     </MudTabPanel>
     <MudTabPanel Text="@Localize["Administration.Systeminfo.Health"]">
         
