--- a/NetEvent/Client/Pages/Administration/Settings.razor
+++ b/NetEvent/Client/Pages/Administration/Settings.razor
@@ -26,7 +26,7 @@
                                 break;
                             @default:
 
-                                <div>@Localize["Administration.Settings.MissingType", systemSetting.ValueType.GetType().Name, systemSetting.Key, _OrganizationData.First(x=>x.Key == systemSetting.Key).Value]</div>
+                                <div>Missing InputType @systemSetting.ValueType.GetType().Name for Setting @systemSetting.Key with Value- @_OrganizationData.First(x=>x.Key == systemSetting.Key).Value</div>
                                 break;
                         }
                     }
